// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Danger without crashing 1`] = `
<body>
  <div>
    <i
      aria-hidden="true"
      class="rcx-box rcx-box--full rcx-framed-icon--danger rcx-framed-icon rcx-icon--name-rocket rcx-icon rcx-css-1bepdyv"
    >
      
    </i>
  </div>
</body>
`;

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <i
      aria-hidden="true"
      class="rcx-box rcx-box--full rcx-framed-icon--neutral rcx-framed-icon rcx-icon--name-rocket rcx-icon rcx-css-1bepdyv"
    >
      
    </i>
  </div>
</body>
`;

exports[`renders Info without crashing 1`] = `
<body>
  <div>
    <i
      aria-hidden="true"
      class="rcx-box rcx-box--full rcx-framed-icon--info rcx-framed-icon rcx-icon--name-rocket rcx-icon rcx-css-1bepdyv"
    >
      
    </i>
  </div>
</body>
`;

exports[`renders Success without crashing 1`] = `
<body>
  <div>
    <i
      aria-hidden="true"
      class="rcx-box rcx-box--full rcx-framed-icon--success rcx-framed-icon rcx-icon--name-rocket rcx-icon rcx-css-1bepdyv"
    >
      
    </i>
  </div>
</body>
`;

exports[`renders Warning without crashing 1`] = `
<body>
  <div>
    <i
      aria-hidden="true"
      class="rcx-box rcx-box--full rcx-framed-icon--warning rcx-framed-icon rcx-icon--name-rocket rcx-icon rcx-css-1bepdyv"
    >
      
    </i>
  </div>
</body>
`;
